...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="Last 6 months activity"
                    android:textColor="@color/text_secondary" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/historyChart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_marginTop="16dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

...
