...
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toEndOf="@id/iconContainer"
            app:layout_constraintTop_toTopOf="@id/iconContainer"
            app:layout_constraintBottom_toTopOf="@id/tvBillDate"
            app:layout_constraintEnd_toStartOf="@id/tvBillAmount"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Internet Bill" />

        <!-- Bill Date & SMS Badge -->
        <LinearLayout
            android:id="@+id/tvBillDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
